--- a/mono-server/modules/app/pom.xml
+++ b/mono-server/modules/app/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>jedis</artifactId>
             <version>3.6.0</version> <!-- 请使用最新的稳定版本 -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
