--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,8 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region $AWS DEFAULT REGION | docker login --username Aws --password-stdin $AWS ACCOUNT ID.dkr.ecr.$AWS DEFAULT REGION.amazonaws.co
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION |
+        docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
       - echo Entered the build phase...
