--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
       - cd deps-main && mvn install
       - mvn install --batch-mode -DskipTests # 在项目根目录执行Maven构建并跳过单元测试
       - echo Building the Docker image...
-      - docker build -t uni-dream-backend:latest -f mono-server/Dockerfile . # 使用mono-server中的Dockerfile构建镜像
+      - docker build -t uni-dream-backend:latest -f ./mono-server/Dockerfile . # 使用mono-server中的Dockerfile构建镜像
       - docker tag uni-dream-backend:latest 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
       - echo Pushing the Docker image...
       - docker push 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
