--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,12 +20,12 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - pwd # 打印当前工作目录
-      - ls -l # 打印当前目录下的文件和目录
       - cd deps-main && mvn install
       - mvn install --batch-mode -DskipTests # 在项目根目录执行Maven构建并跳过单元测试
       - echo Building the Docker image...
-      - docker build -t uni-dream-backend:latest -f ./mono-server/Dockerfile . # 使用mono-server中的Dockerfile构建镜像
+      - pwd # 打印当前工作目录
+      - ls -l # 打印当前目录下的文件和目录
+      - cd mono-server && docker build -t uni-dream-backend:latest -f Dockerfile . # 使用mono-server中的Dockerfile构建镜像
       - docker tag uni-dream-backend:latest 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
       - echo Pushing the Docker image...
       - docker push 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
