--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,9 +20,9 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn install -pl deps-main --batch-mode -DskipTests
-      - mvn install -pl deps --batch-mode -DskipTests
-      - mvn install -pl jooq --batch-mode -DskipTests
+      - cd deps-main && mvn install && cd ..
+      - cd deps && mvn install && cd ..
+      - cd jooq && mvn install && cd ..
       - echo Building the Docker image...
       - pwd # 打印当前工作目录
       - ls -l # 打印当前目录下的文件和目录
