educator part 1. educator available time slot 2. unit test 3. uni response code 4. educator profile - bugfix

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,7 @@ phases:
       - echo Entered the build phase...
       - echo Build started on `date`
       - cd deps-main && mvn install && cd ..
+      - cd jooq && mvn install && cd ..
       - echo Building the Docker image...
       - pwd # 打印当前工作目录
       - ls -l # 打印当前目录下的文件和目录
