educator part 1. educator available time slot 2. unit test 3. uni response code 4. educator profile - bugfix

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     <version>20230926.0</version>
 
     <modules>
-        <module>jooq</module>
-        <module>deps</module>
-        <module>mono-server</module>
-        <module>deps-main</module>
+<!--        <module>jooq</module>-->
+<!--        <module>deps</module>-->
+<!--        <module>mono-server</module>-->
+<!--        <module>deps-main</module>-->
     </modules>
 
 
