--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,13 +20,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - cd deps-main && mvn install && cd ..
-      - pwd # 打印当前工作目录
-      - ls -l # 打印当前目录下的文件和目录
-      - cd deps && mvn install && cd ..
-#      - echo Building the Docker image...
-      - pwd # 打印当前工作目录
-      - ls -l # 打印当前目录下的文件和目录
+      - mvn clean package -Dmaven.test.skip=true
       - cd mono-server && docker build -t uni-dream-backend:latest -f Dockerfile . # 使用mono-server中的Dockerfile构建镜像
       - docker tag uni-dream-backend:latest 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
       - echo Pushing the Docker image...
