--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,10 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
+      - cd deps-main & mvn install
+      - cd ../deps & mvn install
+      - cd ../joop & mvn install
+      - cd ..
       - mvn clean package -Dmaven.test.skip=true
       - cd mono-server && docker build -t uni-dream-backend:latest -f Dockerfile . # 使用mono-server中的Dockerfile构建镜像
       - docker tag uni-dream-backend:latest 767398110927.dkr.ecr.ap-southeast-1.amazonaws.com/uni-dream-backend:latest
