--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - echo Build started on `date`
       - cd deps-main && mvn install
       - cd ../deps && mvn install
-      - cd ../joop && mvn install
+      - cd ../jooq && mvn install
       - cd ..
       - mvn clean package -Dmaven.test.skip=true
       - cd mono-server && docker build -t uni-dream-backend:latest -f Dockerfile . # 使用mono-server中的Dockerfile构建镜像
