--- a/jooq/pom.xml
+++ b/jooq/pom.xml
@@ -7,7 +7,7 @@
 
     <modules>
         <module>modules/mono</module>
-        <module>untitled</module>
+<!--         <module>untitled</module> -->
     </modules>
 
     <parent>
