educator part 1. session comment

--- a/mono-server/backend.env
+++ b/mono-server/backend.env
@@ -1,4 +1,3 @@
-# Spring Environment Variables
 LOG_LEVEL=INFO
 
 DATASOURCE_URL=jdbc:postgresql://mono-dev.cbo4woagom4h.ap-southeast-1.rds.amazonaws.com:5432/mono
@@ -7,22 +6,22 @@ DATASOURCE_PASSWORD=dev123456
 
 REDIS_CACHE_HOST=mono-redis-dev.ynd9ns.clustercfg.apse1.cache.amazonaws.com
 REDIS_CACHE_PORT=6379
-REDIS_CACHE_SSL=true
-REDIS_CACHE_USER=monoServer
-REDIS_CACHE_PASSWORD=KASdnfewidfa87481
-REDIS_CACHE_DB=1
+REDIS_CACHE_SSL=false
+REDIS_CACHE_USER=
+REDIS_CACHE_PASSWORD=
+REDIS_CACHE_DB=0
 
-EMAIL_SMTP_HOST=smtp.office365.com
+EMAIL_SMTP_HOST=smtpout.secureserver.net
 EMAIL_SMTP_PORT=587
-EMAIL_SMTP_LOGIN=no-reply@Powhouse1.onmicrosoft.com
-EMAIL_SMTP_PASSWORD=UniD123456
+EMAIL_SMTP_LOGIN=support@universitydream.co
+EMAIL_SMTP_PASSWORD=Uni-d2023
 EMAIL_DISPLAY_NAME=UNI-D
 
 REGISTER_USER_TIMEOUT_MINUTES=10
 REGISTER_USER_OTP_RESEND_SECONDS=60
 REGISTER_USER_OTP_RESEND_MAX_RETRIES=2
 
-JWT_EXPIRY_MINUTES=60
+JWT_EXPIRY_MINUTES=1440
 JWT_ISSUER=UNI-D
 
 SQS_MAIN=https://sqs.ap-southeast-1.amazonaws.com/767398110927/dev-sqs-mono-server.fifo
@@ -60,6 +59,6 @@ MS_SECRET_VALUE=bvV8Q~DVS3E3-MvfPq1ZjoAT.tkdif2K1iM6lbnF
 MS_SECRET_ID=3e2ca7fb-db89-4373-893c-3f5a4f0b90c0
 MS_ORGANIZER_ID=abd723c7-430f-4aa6-abaa-3be17b958100
 
-AWS_ACCESS_KEY_ID=AKIA55H27KY3WC6W4UFB
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=ap-northeast-2
+AWS_ACCESS_KEY_ID=AKIA3FLD543H7ZXHRDJW
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-southeast-1
