--- a/deps-main/modules/core/jooqCodeGen/pom.xml
+++ b/deps-main/modules/core/jooqCodeGen/pom.xml
@@ -24,5 +24,9 @@
             <artifactId>jooq-codegen-maven</artifactId>
             <version>${pwh.version.jooq}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
